--- a/healthcare data exploration.ipynb
+++ b/healthcare data exploration.ipynb
@@ -18,17 +18,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import datetime as dt\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import os\n"
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "id": "fec41e23-e7b2-47b6-8c81-165134832b04",
    "metadata": {},
    "outputs": [
@@ -325,12 +326,15 @@
        "31  Average\\r\\nAnnual %\\r\\nGrowth\\r\\n(1991-2020)        5.7%  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Open file, transpose for legibility, then select only the years for which I have other data, 1991-2023, \n",
+    "#or 2020 as listed here.\n",
+    "\n",
     "healthcare = pd.read_csv('/Users/ofrioren/GIT/data/healthcare per state.csv') \n",
     "healthcare_df = healthcare.transpose()\n",
     "healthcare_Cali = healthcare_df[[0, 56]]\n",
@@ -595,6 +599,7 @@
     }
    ],
    "source": [
+    "#Reformat the file to exclude text explanations.\n",
     "healthcare_cali=healthcare_cali.drop(healthcare_cali.index[0], axis=0)\n",
     "healthcare_cali=healthcare_cali.drop(healthcare_cali.index[30], axis=0)\n",
     "healthcare_cali"
@@ -730,6 +735,7 @@
     }
    ],
    "source": [
+    "#Dropping rows again to accomodate only the years for which I have homelessness data. I also changed the coulumn names. \n",
     "healthcare_cali=healthcare_cali.drop(healthcare_cali.index[0:16], axis=0)\n",
     "healthcare_cali=healthcare_cali.rename(columns = {0:'Year', 56:'California'})\n",
     "healthcare_cali=healthcare_cali.drop(healthcare_cali.columns[0], axis=1)\n",
@@ -975,6 +981,8 @@
     }
    ],
    "source": [
+    "#I imported a file with homelessness data, unemployment rates, CPI(consumer price index), housing prices for LA, and the \n",
+    "#overall homeless count for Los Angeles. I dropped empty columns and 'na' values.\n",
     "df_los_angeles = pd.read_csv('/Users/ofrioren/GIT/data/2007-2023-LA homeless.csv') \n",
     "df_los_angeles = df_los_angeles.drop(df_los_angeles.columns[7:], axis=1)\n",
     "df_los_angeles = df_los_angeles.drop(df_los_angeles.columns[1], axis=1)\n",
@@ -1222,8 +1230,9 @@
     }
    ],
    "source": [
+    "#I converted the year into integers instead of floats.\n",
     "df_los_angeles['Year'] = df_los_angeles['Year'].astype('int')\n",
-    "df_los_angeles\n"
+    "df_los_angeles"
    ]
   },
   {
@@ -1241,6 +1250,7 @@
     }
    ],
    "source": [
+    "#Checked to verify that it converted.\n",
     "healthcare_cali['Year'] = healthcare_cali['Year'].astype('int')\n",
     "print(healthcare_cali['Year'].dtype)"
    ]
@@ -1521,6 +1531,7 @@
     }
    ],
    "source": [
+    "# I merged the two DataFrames on 'Year' and did some column renaming. \n",
     "df_data = pd.merge_ordered(df_los_angeles, healthcare_cali, on='Year')\n",
     "df_data = df_data.rename(columns = {'California': 'Healthcare Cost, California'})\n",
     "df_data "
@@ -1551,6 +1562,7 @@
     }
    ],
    "source": [
+    "#I converted data-types in order to delete commas in strings.\n",
     "df_data['Overall Homeless'] = df_data['Overall Homeless'].astype('str')\n",
     "df_data['Overall Homeless'] = df_data['Overall Homeless'].str.replace(',', '')\n",
     "df_data['Overall Homeless'] = df_data['Overall Homeless'].astype('int') \n",
@@ -1572,6 +1584,7 @@
     }
    ],
    "source": [
+    "#I converted additional data-types in order to delete commas in strings.\n",
     "df_data['Healthcare Cost, California'] = df_data['Healthcare Cost, California'].fillna(0)\n",
     "df_data['Healthcare Cost, California'] = df_data['Healthcare Cost, California'].astype('str')\n",
     "df_data['Healthcare Cost, California'] = df_data['Healthcare Cost, California'].str.replace(',', '')\n",
@@ -1594,6 +1607,7 @@
     }
    ],
    "source": [
+    "# I created a function, Healthcare_Cost_Incr_Rate, to calculate the percentage increase in healthcare from one year to the next.\n",
     "def Healthcare_Cost_Incr_Rate(value1, value2):\n",
     "    rate = ((value2-value1)/(value1)*100)\n",
     "    return rate\n",
@@ -1609,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "id": "89b338da-7d9f-4bf5-92ad-4a86f50b0399",
    "metadata": {},
    "outputs": [
@@ -1620,12 +1634,14 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#The data above change in value somewhat drastically, so it does not seem appropriate to just use the value from the last year \n",
+    "#to calculate the increase for the next year. Instead I will use the mean of the values.\n",
     "HCIR=pd.DataFrame(HCIR)\n",
     "HCIR.mean()"
    ]
@@ -1914,7 +1930,7 @@
     }
    ],
    "source": [
-    "#I used the average health care cost increase to approximate the healthcare cost for the years following 2020.\n",
+    "#I used the average health care cost increase to approximate the healthcare cost for the 'na' values from 2020-2023.\n",
     "base_value = 405451\n",
     "increment_rate = 1.05094\n",
     "\n",
@@ -29681,6 +29697,10 @@
     }
    ],
    "source": [
+    "#Here I use the package from ydata_profiling to get a quick visual report of the data. It indicates that the 'Obama Indicator' \n",
+    "#of whether ACA is in legislature, and whether the universal mandate is in effect does not correlate with homelessness, as expected.\n",
+    "#However, there do seem to be preliminary findings to suggest that healthcare cost is associated with homelessness. \n",
+    "#I will look for additional data to see whether anything more specific, like 'out-of-pocket costs' are strongly associated.\n",
     "from ydata_profiling import ProfileReport\n",
     "\n",
     "profile = ProfileReport(df_data, title=\"Pandas Profiling Report\")\n",
